--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
       <javax.xml.ws.version>2.1</javax.xml.ws.version>
       <javax.xml.soap.saaj.version>1.3</javax.xml.soap.saaj.version>
       <org.chromattic.version>1.1.4</org.chromattic.version>
-      <org.jboss.arquillian.version>1.0.0.Alpha2</org.jboss.arquillian.version>
+      <org.jboss.arquillian.version>1.0.2.Final</org.jboss.arquillian.version>
       <org.mockito.version>1.8.5</org.mockito.version>
       <org.jboss.portletbridge.version>3.1.0.Alpha1</org.jboss.portletbridge.version>
       <org.apache.cxf.version>2.4.6</org.apache.cxf.version>
@@ -285,6 +285,15 @@
             <artifactId>chromattic.exo</artifactId>
             <version>${org.chromattic.version}</version>
             <scope>test</scope>
+         </dependency>
+
+         <!-- For WSRP producer tests -->
+         <dependency>
+            <groupId>org.jboss.arquillian</groupId>
+            <artifactId>arquillian-bom</artifactId>
+            <version>${org.jboss.arquillian.version}</version>
+            <scope>import</scope>
+            <type>pom</type>
          </dependency>
 
          <!--
