--- a/wsrp-producer-war/pom.xml
+++ b/wsrp-producer-war/pom.xml
@@ -43,115 +43,13 @@
    </properties>
 
    <profiles>
+
       <profile>
-         <id>default</id>
-         <activation>
-            <activeByDefault>true</activeByDefault>
-         </activation>
-         <properties>
-            <cargo.jvmargs>${cargo.jvmargs.default}</cargo.jvmargs>
-         </properties>
-      </profile>
-      <profile>
-         <id>cargo-debug</id>
-         <properties>
-            <!-- add the jdwp setup for the tests -->
-            <cargo.jvmargs.debug>-Xdebug -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y
-            </cargo.jvmargs.debug>
-            <cargo.jvmargs>${cargo.jvmargs.default} ${cargo.jvmargs.debug}</cargo.jvmargs>
-         </properties>
-      </profile>
-      <profile>
-         <!-- uses a zip of jboss as instead of an exploded directory -->
-         <id>server-url</id>
-         <activation>
-            <property>
-               <name>jboss.zip.url</name>
-            </property>
-         </activation>
-         <properties>
-            <jboss.systemPath>${jboss.zip.url}</jboss.systemPath>
-            <JBOSS_5_1_0_HOME>${project.build.directory}/cargo/servers/jboss-5.1.0.GA</JBOSS_5_1_0_HOME>
-         </properties>
-         <dependencies>
-            <dependency>
-               <groupId>org.jboss.jbossas</groupId>
-               <artifactId>jboss-as-distribution</artifactId>
-               <version>5.1.0.GA</version>
-               <scope>system</scope>
-               <type>zip</type>
-               <systemPath>${jboss.systemPath}</systemPath>
-            </dependency>
-         </dependencies>
+         <id>arquillian-jbossas-remote</id>
          <build>
             <plugins>
-               <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-dependency-plugin</artifactId>
-                  <version>2.1</version>
-                  <executions>
-                     <execution>
-                        <id>dependency-unpack</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                           <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                           <includeGroupIds>org.jboss.jbossas</includeGroupIds>
-                           <includeArtifactIds>jboss-as-distribution</includeArtifactIds>
-                           <outputDirectory>${project.build.directory}/cargo/servers</outputDirectory>
-                        </configuration>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-      <profile>
-         <id>test-server</id>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.codehaus.cargo</groupId>
-                  <artifactId>cargo-maven2-plugin</artifactId>
-                  <version>1.0.1</version>
-                  <configuration>
-                     <wait>true</wait>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-      <profile>
-         <id>integration-tests-enabled</id>
-         <activation>
-            <property>
-               <name>!skipTests</name>
-            </property>
-         </activation>
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.codehaus.cargo</groupId>
-                  <artifactId>cargo-maven2-plugin</artifactId>
-                  <version>1.0.1</version>
-                  <executions>
-                     <execution>
-                        <id>pre-integration-start-server</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                           <goal>start</goal>
-                        </goals>
-                     </execution>
-                     <execution>
-                        <id>post-integration-stop-server</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                           <goal>stop</goal>
-                        </goals>
-                     </execution>
-                  </executions>
-               </plugin>
+
+               <!-- Create test portlet WARs -->
                <plugin>
                   <artifactId>maven-assembly-plugin</artifactId>
                   <configuration>
@@ -161,7 +59,7 @@
                      <attach>false</attach>
                      <outputDirectory>${project.build.directory}/test-archives</outputDirectory>
                      <descriptors>
-                        <descriptor>src/test/assembly/test-producer.xml</descriptor>
+                        <!--<descriptor>src/test/assembly/test-producer.xml</descriptor>-->
                         <descriptor>src/test/assembly/test-markup-portlet.xml</descriptor>
                         <descriptor>src/test/assembly/test-renderparam-portlet.xml</descriptor>
                         <descriptor>src/test/assembly/test-session-portlet.xml</descriptor>
@@ -203,8 +101,9 @@
                      </dependency>
                   </dependencies>
                </plugin>
+
+               <!-- Copy Google Portlet samples from PC module to test-archives so that they can be used in tests -->
                <plugin>
-                  <!-- Copy Google Portlet samples from PC module to test-archives so that they can be used in tests -->
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-dependency-plugin</artifactId>
                   <version>2.1</version>
@@ -219,7 +118,8 @@
                               <artifactItem>
                                  <groupId>org.gatein.pc</groupId>
                                  <artifactId>pc-samples</artifactId>
-                                 <version>2.3.0-Beta06</version>
+                                 <!-- TODO: this should use the PC version as defined by parent but the artifact is unavailable for version > 2.3.2-GA at the moment -->
+                                 <version>2.3.2-GA</version>
                                  <classifier>google-portlet</classifier>
                                  <type>war</type>
                                  <destFileName>google-portlet.war</destFileName>
@@ -230,8 +130,74 @@
                      </execution>
                   </executions>
                </plugin>
+
+
+               <plugin>
+                  <groupId>org.codehaus.cargo</groupId>
+                  <artifactId>cargo-maven2-plugin</artifactId>
+                  <version>1.2.4</version>
+                  <configuration>
+                     <container>
+                        <containerId>jboss71x</containerId>
+                        <artifactInstaller>
+                           <groupId>org.jboss.as</groupId>
+                           <artifactId>jboss-as-dist</artifactId>
+                           <version>7.1.1.Final</version>
+                           <type>zip</type>
+                           <extractDir>${project.build.directory}</extractDir>
+                        </artifactInstaller>
+                     </container>
+                     <!--<deployables>
+                        <deployable>
+                           <location>${basedir}/target/test-archives/test-producer.sar</location>
+                           <type>sar</type>
+                        </deployable>
+                     </deployables>-->
+                  </configuration>
+                  <executions>
+                     <execution>
+                        <id>start-container</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                           <goal>start</goal>
+                           <goal>deploy</goal>
+                        </goals>
+                     </execution>
+                     <execution>
+                        <id>stop-container</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                           <goal>stop</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+
             </plugins>
          </build>
+         <activation>
+            <activeByDefault>true</activeByDefault>
+         </activation>
+         <dependencies>
+            <dependency>
+               <groupId>org.jboss.spec</groupId>
+               <artifactId>jboss-javaee-6.0</artifactId>
+               <version>3.0.1.Final</version>
+               <type>pom</type>
+               <scope>provided</scope>
+            </dependency>
+            <dependency>
+               <groupId>org.jboss.as</groupId>
+               <artifactId>jboss-as-arquillian-container-remote</artifactId>
+               <version>7.1.2.Final</version>
+               <scope>test</scope>
+            </dependency>
+            <!--<dependency>
+               <groupId>org.jboss.arquillian.protocol</groupId>
+               <artifactId>arquillian-protocol-servlet</artifactId>
+               <scope>test</scope>
+            </dependency>-->
+         </dependencies>
       </profile>
    </profiles>
 
@@ -352,104 +318,6 @@
       <dependency>
          <groupId>org.jboss.arquillian.junit</groupId>
          <artifactId>arquillian-junit-container</artifactId>
-      </dependency>
-      <!--<dependency>
-         <groupId>org.jboss.arquillian</groupId>
-         <artifactId>arquillian-api</artifactId>
-         <version>${org.jboss.arquillian.version}</version>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.arquillian</groupId>
-         <artifactId>arquillian-junit</artifactId>
-         <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.jboss.arquillian.container</groupId>
-         <artifactId>arquillian-jbossas-remote-51</artifactId>
-         <scope>test</scope>
-      </dependency>-->
-      <dependency>
-         <groupId>org.jboss.jbossas</groupId>
-         <artifactId>jboss-as-client</artifactId>
-         <version>5.1.0.GA</version>
-         <scope>test</scope>
-         <type>pom</type>
-         <exclusions>
-            <exclusion>
-               <groupId>trove</groupId>
-               <artifactId>trove</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>org.jboss.ejb3</groupId>
-               <artifactId>jboss-ejb3-core</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>org.jboss.ejb3</groupId>
-               <artifactId>jboss-as-ejb3</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>javax.security</groupId>
-               <artifactId>jaas</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>javax.security</groupId>
-               <artifactId>jacc</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>cglib</groupId>
-               <artifactId>cglib</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>jpl-util</groupId>
-               <artifactId>jpl-util</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>jpl-pattern</groupId>
-               <artifactId>jpl-pattern</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>apache-httpclient</groupId>
-               <artifactId>commons-httpclient</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>apache-log4j</groupId>
-               <artifactId>log4j</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>log4j</groupId>
-               <artifactId>log4j</artifactId>
-            </exclusion>
-            <exclusion>
-               <artifactId>javax.transaction</artifactId>
-               <groupId>jta</groupId>
-            </exclusion>
-         </exclusions>
-      </dependency>
-      <dependency>
-         <groupId>trove</groupId>
-         <artifactId>trove</artifactId>
-         <version>1.0.2</version>
-         <scope>test</scope>
-      </dependency>
-      <!--
-      <dependency>
-         <groupId>org.jboss.aop</groupId>
-         <artifactId>jboss-aop</artifactId>
-         <version>2.1.1.GA</version>
-         <scope>test</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>trove</groupId>
-               <artifactId>trove</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency>
-      -->
-      <dependency>
-         <groupId>org.jboss.jbossas</groupId>
-         <artifactId>jboss-server-manager</artifactId>
-         <version>1.0.3.GA</version>
          <scope>test</scope>
       </dependency>
       <dependency>
@@ -464,13 +332,14 @@
       <plugins>
          <plugin>
             <artifactId>maven-war-plugin</artifactId>
-            <version>2.1-beta-1</version>
+            <version>2.2</version>
             <configuration>
                <packagingExcludes>WEB-INF/lib/*.jar</packagingExcludes>
                <archive>
-                  <manifest>
+                  <!--<manifest>
                      <addClasspath>true</addClasspath>
-                  </manifest>
+                     <classpathPrefix>lib/</classpathPrefix>
+                  </manifest>-->
                   <manifestEntries>
                      <Dependencies>org.apache.cxf</Dependencies>
                   </manifestEntries>
@@ -526,59 +395,14 @@
                </execution>
             </executions>
          </plugin>
-         <plugin>
-            <groupId>org.codehaus.cargo</groupId>
-            <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.0.1</version>
-            <configuration>
-               <container>
-                  <containerId>jboss51x</containerId>
-                  <home>${JBOSS_5_1_0_HOME}</home>
-                  <log>${basedir}/target/jboss51x/container.log</log>
-                  <systemProperties>
-                     <!-- Since the tests run on the server, we need to pass system properties to the
-                          server so that the tests can use them. -->
-                     <!-- The tests need to deploy and undeploy artifacts during the test so we need to pass
-                          properties to enable this behaviour. -->
-                     <jboss.deploy.dir>${jboss.server.home.dir}/conf</jboss.deploy.dir>
-                     <test.deployables.dir>${basedir}/target/test-archives</test.deployables.dir>
-                     <jboss.deploy.url.prefix>http://localhost:8080/jmx-console/HtmlAdaptor?action=invokeOpByName&amp;name=jboss.system:service%3DMainDeployer&amp;methodName=deploy&amp;argType=java.net.URL&amp;arg0=</jboss.deploy.url.prefix>
-                     <jboss.undeploy.url.prefix>http://localhost:8080//jmx-console/HtmlAdaptor?action=invokeOpByName&amp;name=jboss.system:service%3DMainDeployer&amp;methodName=undeploy&amp;argType=java.net.URL&amp;arg0=</jboss.undeploy.url.prefix>
-                  </systemProperties>
-                  <timeout>180000</timeout>
-               </container>
-               <wait>false</wait>
-               <configuration>
-                  <home>${basedir}/target/cargo/standalone</home>
-                  <properties>
-                     <cargo.logging>low</cargo.logging>
-                     <cargo.jvmargs>${cargo.jvmargs}</cargo.jvmargs>
-                  </properties>
-                  <deployables>
-                     <deployable>
-                        <location>${basedir}/target/test-archives/test-producer.sar</location>
-                        <type>sar</type>
-                     </deployable>
-                  </deployables>
-                  <configfiles>
-                     <!-- hack to get normal logging instead of incredibly versbose -->
-                     <configfile>
-                        <file>${JBOSS_5_1_0_HOME}/server/default/conf/jboss-log4j.xml</file>
-                        <tofile>/conf/jboss-log4j.xml</tofile>
-                     </configfile>
-                     <configfile>
-                        <file>${basedir}/src/test/config/web.xml</file>
-                        <tofile>/deployers/jbossweb.deployer/web.xml</tofile>
-                     </configfile>
-                  </configfiles>
-               </configuration>
-            </configuration>
-         </plugin>
       </plugins>
-      <testResources>
+      <!--<testResources>
          <testResource>
-            <directory>src/test/jboss-resources</directory>
+            <directory>src/test/resources</directory>
          </testResource>
-      </testResources>
+         &lt;!&ndash;<testResource>
+            <directory>src/test/jboss-resources</directory>
+         </testResource>&ndash;&gt;
+      </testResources>-->
    </build>
 </project>
