--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
   ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
    <modelVersion>4.0.0</modelVersion>
 
@@ -56,17 +57,19 @@
       <version.javax.xml.ws>2.1</version.javax.xml.ws>
       <version.javax.xml.soap.saaj>1.3</version.javax.xml.soap.saaj>
       <com.google.guava.version>r09</com.google.guava.version>
-      
+
       <!-- maven-release-plugin -->
       <useReleaseProfile>false</useReleaseProfile>
       <arguments>-Prelease</arguments>
       <version.release.plugin>2.2.1</version.release.plugin>
       <pushChanges>false</pushChanges>
       <autoVersionSubmodules>true</autoVersionSubmodules>
-      
+
       <!-- buildnumber-maven-plugin : needs 1.0 for git -->
       <version.buildnumber.plugin>1.0</version.buildnumber.plugin>
-      
+
+      <jdk.min.version>1.6</jdk.min.version>
+
    </properties>
 
    <dependencyManagement>
