--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,8 @@
 
       <!-- AS server required for the producer tests -->
       <jbossas.version>7.1.1.Final</jbossas.version>
+
+      <jdk.min.version>1.6</jdk.min.version>
    </properties>
 
    <organization>
